Parcel et chart.js fonctionnels

--- a/hermes/src/styles/style.css
+++ b/hermes/src/styles/style.css
@@ -118,6 +118,10 @@
     font-size: 30px;
 }
 
+#engineCurrentGraph {
+    width: 100%;
+}
+
 footer {
     box-sizing: border-box;
     width: 50%;
