Nouv. stucture, début SSE, import et coversion ts

--- a/hermes/src/frontend/styles/style.css
+++ b/hermes/src/frontend/styles/style.css
@@ -1,10 +1,15 @@
- body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: #161920;
-  color: whitesmoke;
-  font-family: "Roboto", sans-serif;
+@font-face {
+    font-family: Roboto;
+    src: url("./fonts/Roboto-Regular.ttf");
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: #161920;
+    color: whitesmoke;
+    font-family: "Roboto", sans-serif;
 }
 
 #wrapper {
@@ -24,7 +29,7 @@
     position: fixed;
 }
 
-#header > #navbar {
+#header>#navbar {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -32,24 +37,24 @@
     align-items: center;
 }
 
-#header > #navbar > .topbarShortcut {
+#header>#navbar>.topbarShortcut {
     margin: 0 10px;
     color: inherit;
     text-decoration: none;
 }
 
-#header > #navbar > .topbarShortcut:first-child {
+#header>#navbar>.topbarShortcut:first-child {
     color: inherit;
     font-size: 25px;
     font-weight: bold;
     text-decoration: none;
 }
 
-#header > #navbar > .topbarShortcut:hover {
+#header>#navbar>.topbarShortcut:hover {
     color: #00aff4;
 }
 
-#header > #navbar > .topbarShortcut:nth-child(n+2):hover {
+#header>#navbar>.topbarShortcut:nth-child(n+2):hover {
     text-decoration: underline;
 }
 
@@ -57,7 +62,6 @@
     width: 100%;
     padding: 100px 25% 0 25%;
     box-sizing: border-box;
-    
 }
 
 .pageSection {
@@ -73,7 +77,7 @@
     margin-bottom: 100px;
 }
 
-.pageSection > h2 {
+.pageSection>h2 {
     margin: 0 0 20px 0;
 }
 
@@ -84,37 +88,37 @@
     justify-content: space-between;
 }
 
-#cubeStatusContainer > .cubeStatus {
+#cubeStatusContainer>.cubeStatus {
     width: 45%;
     height: 100px;
     margin: 0;
     border: transparent;
     border-radius: 10px;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
-    
+
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     background-color: #394960;
 }
 
-#cubeStatusContainer > .cubeStatus > .statusIndicator {
+#cubeStatusContainer>.cubeStatus>.statusIndicator {
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
 
-#cubeStatusContainer > .cubeStatus:nth-child(1) > .statusIndicator {
+#cubeStatusContainer>.cubeStatus:nth-child(1)>.statusIndicator {
     background-color: greenyellow;
     box-shadow: 0 0 20px greenyellow;
 }
 
-#cubeStatusContainer > .cubeStatus:nth-child(2) > .statusIndicator {
+#cubeStatusContainer>.cubeStatus:nth-child(2)>.statusIndicator {
     background-color: crimson;
     box-shadow: 0 0 20px crimson;
 }
 
-#cubeStatusContainer > .cubeStatus > .statusTitle {
+#cubeStatusContainer>.cubeStatus>.statusTitle {
     font-size: 30px;
 }
 
@@ -130,5 +134,5 @@ footer {
     padding: 10px 0;
     border-top: #394960 solid 1px;
     color: #394960;
-    
+
 }
