--- a/hermes/src/frontend/styles/style.css
+++ b/hermes/src/frontend/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Roboto;
-    src: url("./fonts/Roboto-Regular.ttf");
+    src: url("../fonts/Roboto/Roboto-Regular.ttf");
 }
 
 body {
